--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2 class="team__title">Наша команда</h2>
         <ul class="team__list">
           <li class="team__item">
-            <img class="team__image" src="./IMG_3730.jpg" alt="" width="250" height="250" />
+            <img class="team__image" src="./IMG_cat.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
               <h3 class="team__name">Victor</h3>
               <p class="team__desctiption">Header/hero</p>
@@ -39,7 +39,7 @@
             </div>
           </li>
           <li class="team__item">
-            <img class="team__image" src="./IMG_3736.jpg" alt="" width="250" height="250" />
+            <img class="team__image" src="./IMG_Dima.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
               <h3 class="team__name">Dmytro</h3>
               <p class="team__desctiption">Products</p>
@@ -55,7 +55,7 @@
             </div>
           </li>
           <li class="team__item">
-            <img class="team__image" src="./IMG_3730.jpg" alt="" width="250" height="250" />
+            <img class="team__image" src="./IMG_Olesya.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
               <h3 class="team__name">Olesya</h3>
               <p class="team__desctiption">Advantages</p>
@@ -63,7 +63,7 @@
             </div>
           </li>
           <li class="team__item">
-            <img class="team__image" src="./IMG_3730.jpg" alt="" width="250" height="250" />
+            <img class="team__image" src="./IMG_cat.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
               <h3 class="team__name">Tatiana</h3>
               <p class="team__desctiption">Gallery</p>
@@ -71,15 +71,16 @@
             </div>
           </li>
           <li class="team__item">
-            <img class="team__image" src="./IMG_0110.jpg" alt="" width="250" height="250" />
+            <img class="team__image" src="./IMG_Hanna.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
               <h3 class="team__name">Hanna</h3>
+              <p class="team__name">Scrum Master</p>
               <p class="team__desctiption">Customer review</p>
               <p class="team__work"></p>
             </div>
           </li>
           <li class="team__item">
-            <img class="team__image" src="./IMG_3730.jpg" alt="" width="250" height="250" />
+            <img class="team__image" src="./IMG_Anatolyi.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
               <h3 class="team__name">Anatolyi</h3>
               <p class="team__desctiption">Contacts</p>
@@ -87,7 +88,7 @@
             </div>
           </li>
           <li class="team__item">
-            <img class="team__image" src="./IMG_3735.jpg" alt="" width="250" height="250" />
+            <img class="team__image" src="./IMG_Ruslan.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
               <h3 class="team__name">Ruslan</h3>
               <p class="team__desctiption">Footer</p>
@@ -95,7 +96,7 @@
             </div>
           </li>
           <li class="team__item">
-            <img class="team__image" src="./IMG_3730.jpg" alt="" width="250" height="250" />
+            <img class="team__image" src="./IMG_Svitlana.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
               <h3 class="team__name">Svitlana</h3>
               <p class="team__desctiption">Button</p>
@@ -103,19 +104,28 @@
             </div>
           </li>
           <li class="team__item">
-            <img class="team__image" src="./IMG_3730.jpg" alt="" width="250" height="250" />
+            <img class="team__image" src="./IMG_Vova.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
               <h3 class="team__name">Vova</h3>
+              <p class="team__name">Team Lead</p>
               <p class="team__desctiption">Modal windows</p>
               <p class="team__work"></p>
             </div>
           </li>
 
           <li class="team__item">
-            <img class="team__image" src="./IMG_3730.jpg" alt="" width="250" height="250" />
+            <img class="team__image" src="./IMG_Vlad.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
               <h3 class="team__name">Vlad</h3>
               <p class="team__desctiption">Franchise modal</p>
+              <p class="team__work"></p>
+            </div>
+          </li>
+          <li class="team__item">
+            <img class="team__image" src="./IMG_cat.jpg" alt="" width="250" height="250" />
+            <div class="team__cards">
+              <h3 class="team__name">Vlad</h3>
+              <p class="team__desctiption"></p>
               <p class="team__work"></p>
             </div>
           </li>
