--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <section class="hero">
-      <div class="container">
+      <div class="container container__shadow">
         <h1 class="hero__title"></h1>
         <p class="hero__desctiption"></p>
       </div>
@@ -63,7 +63,7 @@
             </div>
           </li>
           <li class="team__item">
-            <img class="team__image" src="./IMG_cat.jpg" alt="" width="250" height="250" />
+            <img class="team__image" src="./IMG_Tetiana.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
               <h3 class="team__name">Tatiana</h3>
               <p class="team__desctiption">Gallery</p>
@@ -134,7 +134,7 @@
     </section>
 
     <section class="idea">
-      <div class="container">
+      <div class="container container__shadow">
         <h2 class="idea__title">Ідея проекту</h2>
         <p class="idea__text">
           Ідея проекту Ice Cream - познайомити потенційних клієнтів з мережею магазинів морозива,
@@ -148,14 +148,14 @@
     </section>
 
     <section class="time">
-      <div class="container">
+      <div class="container container__shadow">
         <h2 class="time__title">Термін виконання</h2>
         <p class="time__description">Термін виконання проекту командою « IT котики» - 1 тиждень.</p>
       </div>
     </section>
 
     <section class="functional">
-      <div class="container">
+      <div class="container container__shadow">
         <h2 class="functional__title">Функціонал</h2>
         <p class="functional__description">
           Ми бачимо перед собою простий та одночасно функціональний сайт, вся інформація надана
