--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <section class="hero">
-      <div class="container container__shadow">
+      <div class="container">
         <h1 class="hero__title"></h1>
         <p class="hero__desctiption"></p>
       </div>
