--- a/index.html
+++ b/index.html
@@ -220,6 +220,46 @@
             </p>
           </li>
         </ul>
+        <section class="functional">
+          <div class="container container__shadow">
+            <h2 class="functional__title">Технології які ми використовували</h2>
+            <ul class="functional__list">
+              <li class="functional__item">
+                <p class="functional__name">HTML/CSS</p>
+              </li>
+              <li class="functional__item">
+                <p class="functional__name">JAVA SCRIPT</p>
+              </li>
+              <li class="functional__item">
+                <p class="functional__name">NODE.JS</p>
+              </li>
+              <li class="functional__item">
+                <p class="functional__name">VSCode</p>
+              </li>
+              <li class="functional__item">
+                <p class="functional__name">FIGMA</p>
+              </li>
+              <li class="functional__item">
+                <p class="functional__name">GIT/GITHUB</p>
+              </li>
+            </ul>
+            <li class="functional__item">
+              <p class="functional__name">XN WIEW MP</p>
+            </li>
+            <li class="functional__item">
+              <p class="functional__name">TRELLO</p>
+            </li>
+            <li class="functional__item">
+              <p class="functional__name">ZOOM</p>
+            </li>
+            <li class="functional__item">
+              <p class="functional__name">ICOMOON</p>
+            </li>
+            <li class="functional__item">
+              <p class="functional__name">SLICK SLIDER</p>
+            </li>
+          </div>
+        </section>
       </div>
     </section>
   </body>
