--- a/index.html
+++ b/index.html
@@ -224,39 +224,39 @@
           <div class="container container__shadow">
             <h2 class="functional__title">Технології які ми використовували</h2>
             <ul class="functional__list">
-              <li class="functional__item">
-                <p class="functional__name">HTML/CSS</p>
+              <li class="functional__items">
+                <p class="functional__names">HTML/CSS</p>
               </li>
-              <li class="functional__item">
-                <p class="functional__name">JAVA SCRIPT</p>
+              <li class="functional__items">
+                <p class="functional__names">JAVA SCRIPT</p>
               </li>
-              <li class="functional__item">
-                <p class="functional__name">NODE.JS</p>
+              <li class="functional__items">
+                <p class="functional__names">NODE.JS</p>
               </li>
-              <li class="functional__item">
-                <p class="functional__name">VSCode</p>
+              <li class="functional__items">
+                <p class="functional__names">VSCode</p>
               </li>
-              <li class="functional__item">
-                <p class="functional__name">FIGMA</p>
+              <li class="functional__items">
+                <p class="functional__names">FIGMA</p>
               </li>
-              <li class="functional__item">
-                <p class="functional__name">GIT/GITHUB</p>
+              <li class="functional__items">
+                <p class="functional__names">GIT/GITHUB</p>
               </li>
             </ul>
-            <li class="functional__item">
-              <p class="functional__name">XN WIEW MP</p>
+            <li class="functional__items">
+              <p class="functional__names">XN WIEW MP</p>
             </li>
-            <li class="functional__item">
-              <p class="functional__name">TRELLO</p>
+            <li class="functional__items">
+              <p class="functional__names">TRELLO</p>
             </li>
-            <li class="functional__item">
-              <p class="functional__name">ZOOM</p>
+            <li class="functional__items">
+              <p class="functional__names">ZOOM</p>
             </li>
-            <li class="functional__item">
-              <p class="functional__name">ICOMOON</p>
+            <li class="functional__items">
+              <p class="functional__names">ICOMOON</p>
             </li>
-            <li class="functional__item">
-              <p class="functional__name">SLICK SLIDER</p>
+            <li class="functional__items">
+              <p class="functional__names">SLICK SLIDER</p>
             </li>
           </div>
         </section>
