--- a/index.html
+++ b/index.html
@@ -31,7 +31,25 @@
         <h2 class="team__title">Наша команда</h2>
         <ul class="team__list">
           <li class="team__item">
-            <img class="team__image" src="./IMG_cat.jpg" alt="" width="250" height="250" />
+            <img class="team__image" src="./IMG_Vova.jpg" alt="" width="250" height="250" />
+            <div class="team__cards">
+              <h3 class="team__name">Vova</h3>
+              <p class="team__name">Team Lead</p>
+              <p class="team__desctiption">Modal windows</p>
+              <p class="team__work"></p>
+            </div>
+          </li>
+          <li class="team__item">
+            <img class="team__image" src="./IMG_Hanna.jpg" alt="" width="250" height="250" />
+            <div class="team__cards">
+              <h3 class="team__name">Hanna</h3>
+              <p class="team__name">Scrum Master</p>
+              <p class="team__desctiption">Customer review</p>
+              <p class="team__work"></p>
+            </div>
+          </li>
+          <li class="team__item">
+            <img class="team__image" src="./IMG_3762.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
               <h3 class="team__name">Victor</h3>
               <p class="team__desctiption">Header/hero</p>
@@ -70,15 +88,7 @@
               <p class="team__work"></p>
             </div>
           </li>
-          <li class="team__item">
-            <img class="team__image" src="./IMG_Hanna.jpg" alt="" width="250" height="250" />
-            <div class="team__cards">
-              <h3 class="team__name">Hanna</h3>
-              <p class="team__name">Scrum Master</p>
-              <p class="team__desctiption">Customer review</p>
-              <p class="team__work"></p>
-            </div>
-          </li>
+
           <li class="team__item">
             <img class="team__image" src="./IMG_Anatolyi.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
@@ -100,15 +110,6 @@
             <div class="team__cards">
               <h3 class="team__name">Svitlana</h3>
               <p class="team__desctiption">Button</p>
-              <p class="team__work"></p>
-            </div>
-          </li>
-          <li class="team__item">
-            <img class="team__image" src="./IMG_Vova.jpg" alt="" width="250" height="250" />
-            <div class="team__cards">
-              <h3 class="team__name">Vova</h3>
-              <p class="team__name">Team Lead</p>
-              <p class="team__desctiption">Modal windows</p>
               <p class="team__work"></p>
             </div>
           </li>
