--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
           </li>
           <li class="team__item">
-            <img class="team__image" src="./IMG_3763.JPG" alt="" width="250" height="250" />
+            <img class="team__image" src="./IMG_3763.jpg" alt="" width="250" height="250" />
             <div class="team__cards">
               <h3 class="team__name">Vlad</h3>
               <p class="team__desctiption"></p>
