--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section class="team">
       <div class="container">
-        <h2 class="team__title">Наша команда</h2>
+        <h2 class="team__title">Наші котики</h2>
         <ul class="team__list">
           <li class="team__item">
             <img class="team__image" src="./IMG_Vova.jpg" alt="" width="250" height="250" />
