--- a/index.html
+++ b/index.html
@@ -259,6 +259,9 @@
             <li class="functional__items">
               <p class="functional__names">SLICK SLIDER</p>
             </li>
+            <li class="functional__items">
+              <p class="functional__names">PARCEL</p>
+            </li>
           </div>
         </section>
       </div>
